# AI-Engineer-Challenge

./: .dockerignore  .gitignore  .pdm-python  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/synapsis/: .env.example  __init__.py  __main__.py  cli.py  main.py  pyproject.toml
src/synapsis/db/: client.py  entities.py  run_db.py  statements.py  transformer.py
src/synapsis/model/dataset/: README.dataset.txt  README.roboflow.txt  data.yaml
src/synapsis/model/dataset/train/: labels.cache
src/synapsis/model/dataset/valid/: labels.cache
src/synapsis/model/model training/: requirements.txt  train.ipynb
src/synapsis/model/model training/Synapses-Model/training/: args.yaml  results.csv
src/synapsis/model/model training/Synapses-Model/training001/: args.yaml  results.csv
src/synapsis/system/: predict.py  routine_predict.py
