[project]
name = "SYNAPSIS"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Zakihran13", email = "zakisuzaki13@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
